--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -178,5 +178,15 @@
   "gui.beemancer.storage_terminal.pending_count": "%d items en attente",
   "gui.beemancer.storage_terminal.pending_types": "%d types différents",
   "gui.beemancer.cancel": "Annuler",
-  "gui.beemancer.request": "Demander"
+  "gui.beemancer.request": "Demander",
+
+  "block.beemancer.honeyed_stone": "Pierre Miellée",
+  "block.beemancer.honeyed_stone_stair": "Escalier en Pierre Miellée",
+  "block.beemancer.honey_pedestal": "Piédestal de Miel",
+  "block.beemancer.honey_crystal_conduit": "Conduit de Cristal de Miel",
+  "block.beemancer.honey_crystal": "Cristal de Miel",
+
+  "message.beemancer.honey_altar.formed": "L'Autel de Miel a été formé !",
+  "message.beemancer.honey_altar.already_formed": "L'Autel de Miel est déjà actif",
+  "message.beemancer.honey_altar.invalid_structure": "Structure invalide - vérifiez le pattern de l'autel"
 }
