--- a/src/main/resources/assets/beemancer/lang/en_us.json
+++ b/src/main/resources/assets/beemancer/lang/en_us.json
@@ -10,9 +10,19 @@
   "block.beemancer.incubator": "Incubator",
   "block.beemancer.manual_centrifuge": "Manual Centrifuge",
   "block.beemancer.powered_centrifuge": "Powered Centrifuge",
+  "block.beemancer.powered_centrifuge_tier2": "Powered Centrifuge Tier 2",
+  "block.beemancer.powered_centrifuge_tier3": "Powered Centrifuge Tier 3",
   "block.beemancer.honey_tank": "Honey Tank",
+  "block.beemancer.honey_tank_tier2": "Honey Tank Tier 2",
+  "block.beemancer.honey_tank_tier3": "Honey Tank Tier 3",
   "block.beemancer.honey_pipe": "Honey Pipe",
+  "block.beemancer.honey_pipe_tier2": "Honey Pipe Tier 2",
+  "block.beemancer.honey_pipe_tier3": "Honey Pipe Tier 3",
+  "block.beemancer.honey_pipe_tier4": "Honey Pipe Tier 4",
   "block.beemancer.item_pipe": "Item Pipe",
+  "block.beemancer.item_pipe_tier2": "Item Pipe Tier 2",
+  "block.beemancer.item_pipe_tier3": "Item Pipe Tier 3",
+  "block.beemancer.item_pipe_tier4": "Item Pipe Tier 4",
   "block.beemancer.crystallizer": "Crystallizer",
   "block.beemancer.alembic": "Alembic",
   "block.beemancer.infuser": "Infuser",
