--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -10,9 +10,19 @@
   "block.beemancer.incubator": "Incubateur",
   "block.beemancer.manual_centrifuge": "Centrifugeuse Manuelle",
   "block.beemancer.powered_centrifuge": "Centrifugeuse Automatique",
+  "block.beemancer.powered_centrifuge_tier2": "Centrifugeuse Automatique Tier 2",
+  "block.beemancer.powered_centrifuge_tier3": "Centrifugeuse Automatique Tier 3",
   "block.beemancer.honey_tank": "Réservoir de Miel",
+  "block.beemancer.honey_tank_tier2": "Réservoir de Miel Tier 2",
+  "block.beemancer.honey_tank_tier3": "Réservoir de Miel Tier 3",
   "block.beemancer.honey_pipe": "Tuyau de Miel",
+  "block.beemancer.honey_pipe_tier2": "Tuyau de Miel Tier 2",
+  "block.beemancer.honey_pipe_tier3": "Tuyau de Miel Tier 3",
+  "block.beemancer.honey_pipe_tier4": "Tuyau de Miel Tier 4",
   "block.beemancer.item_pipe": "Tuyau d'Items",
+  "block.beemancer.item_pipe_tier2": "Tuyau d'Items Tier 2",
+  "block.beemancer.item_pipe_tier3": "Tuyau d'Items Tier 3",
+  "block.beemancer.item_pipe_tier4": "Tuyau d'Items Tier 4",
   "block.beemancer.crystallizer": "Cristalliseur",
   "block.beemancer.alembic": "Alambic",
   "block.beemancer.infuser": "Infuseur",
