--- a/src/main/resources/assets/beemancer/lang/fr_fr.json
+++ b/src/main/resources/assets/beemancer/lang/fr_fr.json
@@ -13,8 +13,7 @@
   "block.beemancer.powered_centrifuge_tier2": "Centrifugeuse Automatique Tier 2",
   "block.beemancer.powered_centrifuge_tier3": "Centrifugeuse Automatique Tier 3",
   "block.beemancer.honey_tank": "Réservoir de Miel",
-  "block.beemancer.honey_tank_tier2": "Réservoir de Miel Tier 2",
-  "block.beemancer.honey_tank_tier3": "Réservoir de Miel Tier 3",
+  "block.beemancer.multiblock_tank": "Réservoir de Fluide",
   "block.beemancer.honey_pipe": "Tuyau de Miel",
   "block.beemancer.honey_pipe_tier2": "Tuyau de Miel Tier 2",
   "block.beemancer.honey_pipe_tier3": "Tuyau de Miel Tier 3",
@@ -26,7 +25,9 @@
   "block.beemancer.crystallizer": "Cristalliseur",
   "block.beemancer.alembic": "Alambic",
   "block.beemancer.infuser": "Infuseur",
-  
+  "block.beemancer.infuser_tier2": "Infuseur Tier 2",
+  "block.beemancer.infuser_tier3": "Infuseur Tier 3",
+
   "fluid.beemancer.honey": "Miel",
   "fluid.beemancer.royal_jelly": "Gelée Royale",
   "fluid.beemancer.nectar": "Nectar",
@@ -58,6 +59,7 @@
   "container.beemancer.manual_centrifuge": "Centrifugeuse Manuelle",
   "container.beemancer.powered_centrifuge": "Centrifugeuse Automatique",
   "container.beemancer.honey_tank": "Réservoir de Miel",
+  "container.beemancer.multiblock_tank": "Réservoir de Fluide",
   "container.beemancer.crystallizer": "Cristalliseur",
   "container.beemancer.alembic": "Alambic",
   "container.beemancer.infuser": "Infuseur",
